# templates

./: flake.nix  pyproject.toml
django/: .pre-commit-config.yaml  flake.nix
django-project/: .gitignore  README.md  flake.nix  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js
django-project/config/: asgi.py  urls.py  wsgi.py
django-project/config/settings/: base.py  local.py
django-project/django_project/core/: apps.py  views.py
django-project/django_project/static/css/: main.min.css
django-project/django_project/templates/: index.html
html-design/: flake.nix
