[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = "Django Template Project"
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipython = "^8.3.0"
ipdb = "^0.13.9"
django-debug-toolbar = "^3.4.0"
pywatchman = "^1.4.1"
rich = "^12.4.1"

[tool.black]
line-length = 99
target-version = ['py39']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
